nav alignment | fix z-index

--- a/app/css/main.less
+++ b/app/css/main.less
@@ -9,9 +9,9 @@ body, html {
   margin:  0;
   width: 100%;  
   height: 100%;
-  overflow: hidden;
-  background-image: linear-gradient(0deg, #78113B, #BD51A0);    
-  // background-image: linear-gradient(-90deg, #13121C, #0E1220);
+  // overflow: hidden;
+  // background-image: linear-gradient(0deg, #78113B, #BD51A0);    
+  background-image: linear-gradient(-90deg, #13121C, #0E1220);
   color: #f0f0f0;
 }
 
@@ -19,21 +19,27 @@ body, html {
   width:100%;
   margin: 0 auto;
   color: #fff;
+    position: relative;
+    /* left: 00px; */
+    // z-index: 999;  
   ul{
-    width: 100px;
-    margin: 0 auto;
-    // background: red;
+    width: 245px;
+    margin: 0 auto;   
+    background: red;
     li{
-      color: white;
-      font-size:1em;
-      text-decoration: none;
-      text-align: center;
-      display: inline-block;
-      font-family: sans-serif;
-      margin-top: 10px;
-      position: relative;
-      text-transform: lowercase;
-      font-family: 'Rajdhani', sans-serif;
+    // text-align: center;
+    // width: 52px;      
+    z-index: 1;
+    color: #fff;
+    font-size: 1.3em;
+    // display: inline-block;
+    text-transform: lowercase;
+    font-family: Rajdhani,sans-serif;
+    /* position: relative; */
+    /* text-decoration: none; */
+    /* margin-top: 27px; */
+    /* margin-left: 10px; */
+    /* margin-right: 20px; */
     }
   }
 }
@@ -127,3 +133,45 @@ div.inner {
   @media only screen  and (min-width : 1824px) {
   /* Styles */
   }
+
+
+  .flex-container {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+  }
+  
+  .flex-item {
+    // width: 60px;
+    // height: 50px;
+    margin: 5px;
+    line-height: 50px;
+    color: white;
+    text-align: center;
+  }
+  
+  .flex-start { 
+    justify-content: flex-start; 
+  }
+  
+  .flex-end { 
+    justify-content: flex-end; 
+  }  
+  
+  .center { 
+    justify-content: center; 
+  }  
+  
+  .space-between { 
+    justify-content: space-between; 
+  }  
+  
+  .space-around { 
+    justify-content: space-around; 
+  }
+  
+  .space-evenly { 
+    justify-content: space-evenly; 
+  }
+  
